disable default features

--- a/crates/wasmtime-provider/Cargo.toml
+++ b/crates/wasmtime-provider/Cargo.toml
@@ -30,7 +30,7 @@ wasi = ["wasi-common", "wasi-cap-std-sync", "wasmtime-wasi"]
 [dependencies]
 wapc = { path = "../wapc", version = "1.0.0" }
 log = "0.4"
-wasmtime = "2.0"
+wasmtime = { version = "2.0", default-features = false }
 anyhow = "1.0"
 thiserror = "1.0"
 cfg-if = "1.0.0"
